objects/Student__c/fields/Father_s_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Annual_Income__c</fullName>
    <label>Father&apos;s Annual Income</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>