objects/Student__c/recordTypes/General_Class.recordType-meta.xml
<RecordType>
    <fullName>General_Class</fullName>
    <active>true</active>
    <label>General Class</label>
</RecordType>