objects/Student__c/recordTypes/Govt_Aided_Class.recordType-meta.xml
<RecordType>
    <fullName>Govt_Aided_Class</fullName>
    <active>true</active>
    <label>Govt Aided Class</label>
</RecordType>