objects/Student__c/validationRules/VR_StudentDOB.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_StudentDOB</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Date_of_Birth__c &gt; TODAY(),YEAR(Date_of_Birth__c) &lt; 1990 )</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>DOB should not be before 1990 and future dates.</errorMessage>
</ValidationRule>