objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>School__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>