objects/Student__c/listViews/Approver_Queue_Student.listView-meta.xml
<ListView>
    <fullName>Approver_Queue_Student</fullName>
    <filterScope>Queue</filterScope>
    <label>Approver Queue</label>
    <queue>Approver_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>